force-app/main/default/objects/Sequence_Step_Config__mdt/Sequence_Step_Config__mdt.object-meta.xml
<CustomObject>
    <label>Sequence Step Config</label>
    <pluralLabel>Sequence Step Configs</pluralLabel>
</CustomObject>