force-app/main/default/objects/Sequence_Step_Config__mdt/fields/Call_Due_Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>Call_Due_Offset_Days__c</fullName>
    <label>Call Due Offset Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>