force-app/main/default/objects/Sequence_Step_Config__mdt/fields/Call_Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Call_Task_Subject__c</fullName>
    <label>Call Task Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>