force-app/main/default/objects/Sequence_Step_Config__mdt/fields/Email_Template_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Dev_Name__c</fullName>
    <label>Email Template Dev Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>