force-app/main/default/objects/Sequence_Step_Config__mdt/fields/Is_Reply__c.field-meta.xml
<CustomField>
    <fullName>Is_Reply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reply</label>
    <type>Checkbox</type>
</CustomField>