force-app/main/default/objects/Sequence_Step_Config__mdt/fields/Next_Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Next_Trigger_Type__c</fullName>
    <label>Next Trigger Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CallCompleted</fullName>
            </value>
            <value>
                <fullName>Timer</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>