force-app/main/default/objects/Sequence_Step_Config__mdt/fields/Next_Wait_Days__c.field-meta.xml
<CustomField>
    <fullName>Next_Wait_Days__c</fullName>
    <label>Next Wait Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>