force-app/main/default/objects/Sequence_Step_Config__mdt/fields/Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Step_Number__c</fullName>
    <label>Step Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>